# ha-kbeacon-ble

./: .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/kbeacon/: __init__.py  config_flow.py  const.py  device.py  manifest.json  sensor.py  strings.json
custom_components/kbeacon/translations/: en.json
custom_components/kbeacon_ble/: config_flow.py  const.py  device.py  manifest.json
scripts/: develop  disable-bt-caps  enable-bt-caps  lint  setup
tests/: __init__.py  conftest.py  test_config_flow.py  test_sensor.py
