[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-kbeacon-ble"
version = "0.1.0"
description = "Home Assistant integration for KBeacon BLE devices"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Daniel M", email = "daniel@mohni.info" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kbeacon-ble",
]

[dependency-groups]
dev = [
    "aiousbwatcher",
    "colorlog>=6.10.1",
    "dbus-fast>=4.0.0",
    "homeassistant>=2025.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pyserial",
    "protobuf>=5.29.5,<6.0.0",
    "pycares<5.0.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "bluetooth-data-tools>=1.20.0",
    "bluetooth-adapters>=2.0.0",
    "habluetooth>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/kbeacon"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["kbeacon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
minversion = "8.0"

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
