[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-kbeacon-ble"
version = "1.0.0rc0"
description = "Home Assistant integration for KBeacon BLE devices"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Daniel M", email = "daniel@mohni.info" },
]
requires-python = ">=3.14.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kbeacon-ble",
]

[dependency-groups]
dev = [
    "aiousbwatcher",
    "bluetooth-adapters>=2.1.0",
    "commitizen>=3.29.1",
    "colorlog>=6.10.1",
    "habluetooth>=5.7.0",
    "homeassistant==2026.3.1",
    "pycares>=5.0.0,<6",
    "pytest>=8.2.0",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component==0.13.325",
    "pyserial",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/kbeacon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
minversion = "8.2"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = ["custom_components/kbeacon/manifest.json:version"]
tag_format = "v$version"
update_changelog_on_bump = true
